--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -10,16 +10,18 @@
 .main-content {
 	max-width: none !important;
 
+	table th {
+		font-size: 1rem;
+	}
 	table td {
 		font-size: 0.9rem;
 	}
 	table.table_big {
 		word-break: unset;
 	}
-	.table_big
-	{
+	.table_big {
 		td {
-			font-size: 0.5rem;
+			font-size: 0.8rem;
 			padding: 0.5rem 0.4rem;
 		}
 	}
