Update: page content style

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -9,6 +9,8 @@
 
 .main-content {
 	max-width: none !important;
+	padding: 2rem !important;
+	font-size: 1rem !important;
 
 	table th {
 		font-size: 1rem;
